# image-resizer

./: .env  .env.benchmark.example  .gitignore  404.html  Cargo.toml  Dockerfile  Makefile  PERFORMANCE_OPTIMIZATIONS.md  README.md  compose.yaml  index.html  index.yaml  mkdocs.yml  openapi.yaml
.docker/minio/: policy.json
.github/: FUNDING.yml
.github/workflows/: build.yml  deploy-docs.yml  deploy-helm-chart.yml  lint-codebase.yml
.roo/rules/: 2-rust.md
about/changelog/: index.html
about/license/: index.html
architecture/components/: index.html
architecture/overview/: index.html
configuration/performance/: index.html
deployment/docker/: index.html
deployment/helm-chart/: index.html
development/contributing/: index.html
development/testing/: index.html
docs/: index.md
docs/about/: changelog.md  license.md
docs/architecture/: components.md  overview.md
docs/configuration/: performance.md
docs/deployment/: docker.md  helm-chart.md
docs/development/: contributing.md  testing.md
docs/getting-started/: configuration.md  installation.md
docs/user-guide/: api-reference.md  examples.md
getting-started/configuration/: index.html
getting-started/installation/: index.html
helm/emgr/: Chart.yaml  values.yaml
helm/serverless/: Chart.yaml  values.yaml
helm/serverless/templates/: knative-service.yaml
search/: search_index.json
src/: full.rs  healthcheck.rs  main.rs  minimal.rs
src/config/: performance.rs
src/models/: params.rs
src/modules/: mod.rs
src/modules/api/: handler.rs  mod.rs  resize.rs
src/modules/env/: env.rs
src/modules/router/: middlewares.rs  mod.rs  router.rs
src/modules/tracer/: init.rs  mod.rs
src/modules/utils/: err.rs  id_gen.rs  mod.rs
src/services/: mod.rs
src/services/cache/: handler.rs
src/services/image/: handler.rs
src/services/metrics/: handler.rs
src/services/resize/: handler.rs
src/services/storage/: core.rs  handler.rs  in_memory_handler.rs  local_fs_handler.rs  mod.rs  s3_handler.rs
user-guide/api-reference/: index.html
user-guide/examples/: index.html
